# sixtracklib

./: .gitignore  .gitmodules  CMakeLists.txt  Settings.cmake.default  pyproject.toml  setup.py  sixtracklib.kdev4
examples/cxx/: CMakeLists.txt  default_backends.cpp  demo01_sc0.toml  demo01_sc1.toml  demo02_sc0.toml  demo02_sc1.toml  like_demotrack_helpers.hpp  like_demotrack_opencl.cpp  track_benchmark_belems_kernel.cpp  track_benchmark_optimised.cpp  track_benchmark_trackjob.cpp
examples/cxx/benchmark/: single_particle.h  track.h
examples/cxx/cuda/: CMakeLists.txt  particle_set_addr_cxx.cpp
examples/cxx/kernels/: track_beam_elements.cl  track_single_particle.cl
python/sixtracklib/: CMakeLists.txt  __init__.py  a.py  beam_elements.py  cuda.py  stcommon.py
python/sixtracklib/_wrapper/: buffer_protocol.cpp  buffer_protocol.h  common.cpp  common.h  common_belements.cpp  common_belements.h  common_cobjects.cpp  common_cobjects.h  common_internal.cpp  common_internal.h  common_math.h  common_particles.cpp  common_particles.h  cxx11_optional.h  demotrack.cpp  demotrack.h  init_helper.cpp  init_helper.h  sixtracklib_wrapper.cpp  testlib.cpp  testlib.h
sixtracklib/: CMakeLists.txt  definitions.h  sixtracklib.h  sixtracklib.hpp  testlib.h  testlib.hpp
sixtracklib/backends/: .gitignore  CMakeLists.txt  backends.h.in  definitions.h
sixtracklib/backends/cuda/: CMakeLists.txt  backend.cpp  backend.h  cuda.h  definitions.h  dlib.h.in  plugin.h
sixtracklib/base/: CMakeLists.txt  definitions.h  export.h
sixtracklib/base/architecture/: CMakeLists.txt  arch_obj.cpp  arch_obj.h  architecture.cpp  architecture.h  architectures_store.cpp  architectures_store.h  definitions.h  node_architecture.h
sixtracklib/base/internal/: CMakeLists.txt  base_types.h  class_id.h  namespace_defines.h
sixtracklib/base/node/: CMakeLists.txt  definitions.h  node_id.cpp  node_id.h  node_info.cpp  node_info.h  tools.cpp  tools.h
sixtracklib/common/: CMakeLists.txt  cobj_type_ids.h  definitions.h  particle.h  particle.hpp  particles.h  particles.hpp  python_bindings.cpp  track.h  track_job.h  track_job_cpu.h  track_orig.h
sixtracklib/common/architecture/: CMakeLists.txt  arch_data.cpp  arch_data.hpp  architecture.cpp  architecture.h  architecture.hpp  architecture_c99.cpp  c99_bindings.toml  definitions.h
sixtracklib/common/backends/: CMakeLists.txt  backend_obj_base.hpp  backends.cpp  backends.h  compiler_compability.h  debug_mode.h  definitions.h  definitions_cuda.h  definitions_opencl.h  dlib.h  dlib_loader.cpp  dlib_loader.h  dlib_loader_posix.cpp  dlib_loader_posix.h  helper_methods.h  mt_backend_obj_base.cpp  mt_backend_obj_base.hpp
sixtracklib/common/be_beamfields/: interpol_1d.c  interpol_1d.h
sixtracklib/common/be_cavity/: be_cavity.h  be_cavity.hpp
sixtracklib/common/be_drift/: CMakeLists.txt  be_drift.h  track.h
sixtracklib/common/be_limit/: be_limit_delta.c  be_limit_delta.h  be_limit_delta.hpp  be_limit_rect_ellipse.c  be_limit_zeta.c  be_limit_zeta.h  be_limit_zeta.hpp  track.h
sixtracklib/common/be_monitor/: CMakeLists.txt
sixtracklib/common/be_multipole/: be_multipole.hpp
sixtracklib/common/be_srotation/: be_srotation.hpp
sixtracklib/common/be_tricub/: be_tricub.c  be_tricub.h
sixtracklib/common/be_xyshift/: be_xyshift.hpp
sixtracklib/common/beam_elements/: .directory  CMakeLists.txt  all_beam_elements.h  all_tracking_maps.h  beam_elements.c  beam_elements.h  beam_elements.hpp  beam_elements_base.hpp  beam_elements_undef.h  cavity.h  cavity.hpp  cobj_type_ids.h  cobj_type_ids_undef.h  definitions.h  demotrack.cpp  demotrack.h  drift.h  drift.hpp  limit_global_aperture.h  limit_rect.h  limit_rect_ellipse.hpp  multipole.h  multipole.hpp  python_bindings.cpp  srotation.h  srotation.hpp  track.h  undef.h  xy_shift.h  xy_shift.hpp
sixtracklib/common/track/: track.c  (+22 more)
sixtracklib/cuda/: CMakeLists.txt  argument.hpp  controller.hpp  cuda_tools.h  cuda_tools_c99.cpp  definitions.h  track_job.hpp
sixtracklib/multiprec/: CMakeLists.txt  definitions.h  math_constants.h  python_bindings.cpp  python_bindings.hpp  random.hpp
sixtracklib/opencl/: .gitignore  CMakeLists.txt  context.h  definitions.h  track_job_cl.h
sixtracklib/openmp/: CMakeLists.txt
sixtracklib/simd/: CMakeLists.txt
sixtracklib/testlib/: CMakeLists.txt
sixtracklib_base/: .gitignore  CMakeLists.txt  definitions.h
sixtracklib_base/backend/: .gitignore  CMakeLists.txt  backend.cpp  backend.h  backend_obj.cpp  backend_obj.h  backends_store.cpp  backends_store.h  definitions.h  dlib.h.in  dlib_loader.cpp  dlib_loader.h  dlib_loader_posix.cpp  dlib_loader_posix.h  node_backend.cpp  node_backend.h
sixtracklib_base/cobjects/: CMakeLists.txt  address_manipulations.h  c_api_helpers.h  cbuffer.cpp  cbuffer.h  cbuffer_view.cpp  cbuffer_view.h  definitions.h  definitions_undef.h  element_pointers.h  element_store_restore.h  element_traits.h  field_counts.h  field_offsets.h  field_sizes.h  flat_buffer.h  garbage_range.h  helper_functions.h  index_object.h  obj_convert.h  obj_delegate.h
sixtracklib_base/control/: CMakeLists.txt  context.cpp  context.h  definitions.h
sixtracklib_base/internal/: CMakeLists.txt  base_types.h  class_id.h  compiler_attributes.h  compiler_compability.h  mem_helpers.h  namespace_defines.h  obj_c_api_traits.h  obj_convert.h  obj_data_type_traits.h  obj_delegate.h  obj_illegal_type.h  obj_store_traits.h  obj_type_id_traits.h  thread_id.cpp  thread_id.h  thread_lock.cpp  thread_lock.h  type_store_traits.h
sixtracklib_base/node/: CMakeLists.txt  definitions.h  node_id.cpp  node_id.h  node_info.cpp  node_info.h
sixtracklib_base/program/: CMakeLists.txt  compile_options.cpp  compile_options.h  definitions.h
tests/: CMakeLists.txt
tests/benchmark/: run_benchmark_cxx.cpp
tests/python/: CMakeLists.txt
tests/sixtracklib/: .directory  CMakeLists.txt  testlib.h  testlib.hpp
tests/sixtracklib_base/: CMakeLists.txt
tools/: CMakeLists.txt  cbuffer_lattice_to_flat_array.cpp  cbuffer_particles_to_flat_array.cpp
tools/codegenerators/: CMakeLists.txt  create_c99_from_cxx.cpp
(+880 files in other folders)
